--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -19,11 +19,6 @@
 /* Styles for `body` element */
 .stores {padding-bottom: 0;}
 
-/* Change bg color for 'Listing' at this breakpoint */
-@include respond-max($ipad-landscape - 1) {
-  .stores.index {background-color: #fff;}
-}
-
 /* Start module */
 .stores-maps {
   position: absolute;
@@ -271,13 +266,13 @@
         position: absolute;
         left: 0;
         /* This right position equals the width of the map view toggle button + 10px */
-        @include to-rem(right, 50);
+        @include to-rem(right, 55);
         @include to-rem(top, 6);
 
         /* Increase top and right positioning at this breakpoint */
         @include respond-min($non-palm) {
           /* This right position equals the width of the map view toggle button + 10px */
-          @include to-rem(right, 134);
+          @include to-rem(right, 139);
           @include to-rem(top, 12);
         }
 
@@ -333,16 +328,6 @@
                       @include to-rem(padding-left padding-right, $spacing-quarter+0.25);
                     }
                   }
-
-                }
-
-                /* Decrease left and right padding at this breakpoint */
-                @include respond-min($ipad-landscape) {
-                  //@include to-rem(padding-left padding-right, $spacing-quarter);
-                }
-
-                @include respond-min(1280) {
-                  //@include to-rem(padding-left padding-right, $spacing-quarter);
                 }
               }
             }
@@ -422,6 +407,17 @@
       right: 0;
       overflow-y: auto;
 
+      /* Make white bg for 'listing view' */
+      .stores-maps__inner--listing & {background-color: #fff;}
+
+      /* Turn off absolute positioning/overflow for 'detail view' at this breakpoint */
+      @include respond-max($ipad-landscape - 1) {
+        .stores-maps__inner--detail & {
+          position: static;
+          overflow-y: visible;
+        }
+      }
+
       /* Post filter count */
       .is-filter-applied & {@include to-rem(top, 88);}
 
@@ -448,14 +444,6 @@
       /* Old IE - change the bg colour */
       @include old-ie {
         .stores-maps .stores-maps__inner.stores-maps__inner--detail & {background-color: lighten($color-grey-3, 5%);}
-      }
-
-      /* Turn off absolute positioning/overflow for 'detail view' at this breakpoint */
-      @include respond-max($ipad-landscape - 1) {
-        .stores-maps__inner--detail & {
-          position: static;
-          overflow-y: visible;
-        }
       }
 
       /* Alter top positioning at this breakpoint */
