Fix PR based on feedback

--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -116,17 +116,17 @@
 
                 <%# Store hours table %>
                 <table cellspacing="0" class="table-striped table-fixed">
-                  <caption class="flush-btm"><span class="hide-visually"><%= @store.name %> opening hours</span></caption>
+                  <caption class="flush-btm"><span class="hide-visually"><%= @store.name %> shopping hours</span></caption>
 
                   <colgroup>
                     <col></col>
                     <col class="three-sixths lap-lrg-two-fifths desk-two-fifths"></col>
                   </colgroup>
 
-                  <thead class="hide-visually">
+                  <thead>
                     <tr>
-                      <th scope="col">Day</th>
-                      <th scope="col">Time</th>
+                      <th scope="col" class="table-cell-padding-off"><span class="hide-visually">Day</span></th>
+                      <th scope="col" class="table-cell-padding-off"><span class="hide-visually">Time</span></th>
                     </tr>
                   </thead>
 
