--- a/app/assets/stylesheets/partials/helpers/_spacing.scss
+++ b/app/assets/stylesheets/partials/helpers/_spacing.scss
@@ -11,27 +11,24 @@
 */
 
 /* Base */
-.mrg-base {@include to-rem(margin-bottom, $spacing-base, !important);}
+.mrg-base,
+.mrg-base-alt {@include to-rem(margin-bottom, $spacing-base, !important);}
 
 .mrg-base-top {@include to-rem(margin-top, $spacing-base, !important);}
 
 /* Half */
-.mrg-half {@include to-rem(margin-bottom, $spacing-half, !important);}
+.mrg-half,
+.mrg-half-alt {@include to-rem(margin-bottom, $spacing-half, !important);}
 
 .mrg-half-top {@include to-rem(margin-top, $spacing-half, !important);}
 
 /* Double */
-.mrg-dbl {@include to-rem(margin-bottom, $spacing-dbl, !important);}
+.mrg-dbl,
+.mrg-dbl-alt {@include to-rem(margin-bottom, $spacing-dbl, !important);}
 
 .mrg-dbl-top {@include to-rem(margin-top, $spacing-dbl, !important);}
 
-/* Apply spacing but remove it for `:last-child` */
-.mrg-base-alt {@include to-rem(margin-bottom, $spacing-base, !important);}
-
-.mrg-half-alt {@include to-rem(margin-bottom, $spacing-half, !important);}
-
-.mrg-dbl-alt {@include to-rem(margin-bottom, $spacing-dbl, !important);}
-
+/* Remove spacing for `:last-child` */
 .mrg-base-alt,
 .mrg-half-alt,
 .mrg-dbl-alt {
