--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -40,7 +40,7 @@
 
 <%# Availability %>
 <% if @deal.stores and @deal.stores.size > 1 %>
-  <div class="island detail-view__availability">
+  <div class="island">
     <h3 class="detail-view__hdr-sub detail-view__mrg-off hn"><%= @store.name %> also available at</h3>
     <ul class="detail-view__mrg-base">
       <% @deal.stores[0..2].each do |store| %>
@@ -55,9 +55,9 @@
 
 <%# Fine print %>
 <% if @deal.terms_and_conditions and !@deal.terms_and_conditions.empty? %>
-  <div class="island toggle-content js-toggle-content js-hide-show">
+  <div class="island toggle-content js-toggle-content js-hide-show<% if @deal.stores and @deal.stores.size > 1 %> detail-view__divider detail-view__divider--top<% end %>">
     <h2 class="detail-view__hdr-sub hn">The fine print</h2>
-    <div class="detail-view__desc detail-view__desc--fine-print detail-view__subtle-txt txt-formatted txt-formatted--user-generated">
+    <div class="detail-view__desc detail-view__desc--fine-print detail-view__subtle-txt">
       <% @deal.terms_and_conditions.each do |paragraph| %>
         <% unless paragraph.empty? %><p><%= paragraph %></p><% end %>
       <% end %>
@@ -72,11 +72,6 @@
 
   <script>
     $(function() {
-
-      // Check if 'Availability' content exists so we can add divider to 'Fine print' container
-      if ($('.detail-view__availability').length) {
-        $('.toggle-content').addClass('detail-view__divider detail-view__divider--top');
-      }
 
       // Run 'Toggle content' plugin
       $('.js-toggle-content').toggleContent({
