--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -133,7 +133,7 @@
                     </thead>
 
                     <tbody>
-                      <% @store_trading_hours[week_number].each do |day| %>
+                      <% @store_trading_hours[week_number].try(:each) do |day| %>
                         <tr>
                           <td>
                             <% if today?(day.date) %><em class="txt-bold"><% end %><%= format_day(day.date,0,3) %><span class="hide-fully--palm"><%= format_day(day.date,3,6) %></span><% if today?(day.date) %></em><% end %>
