--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -1,3 +1,4 @@
+<% if @centre.present? && @search.products.present? %>
 <div ng-controller="ActiveCategoryNavController" class="section-nav container container--wide container--dark">
 
   <%# Section nav %>
@@ -17,35 +18,32 @@
       </div>
     </div>
     <%# Show products/deals/events centre selector toggle button %>
-    <% if @centre.present? %>
-      <button class="btn btn--main btn--main-alt4 btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle">
-        <span class="icon icon--ellipsis-horizontal icon--xlrg icon--flush-top" aria-hidden="true"></span>
-        <span class="hide-visually">Toggle <%= params[:controller] %> centre selector</span>
-      </button>
-    <%- end -%>
+    <button class="btn btn--main btn--main-alt4 btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle">
+      <span class="icon icon--ellipsis-horizontal icon--xlrg icon--flush-top" aria-hidden="true"></span>
+      <span class="hide-visually">Toggle <%= params[:controller] %> centre selector</span>
+    </button>
     <%# //Show products/deals/events centre selector toggle button %>
   </div>
   <%# //Section nav %>
 
   <%# Show products/deals/events centre selector %>
-  <% if @centre.present? %>
-    <div class="section-nav__centre-selector container--wide toggle-visibility js-disabled-hide" id="show-products-deals-events-toggle">
-      <div class="container container--position">
-        <div class="flag flag--shrink-wrap">
-          <div class="flag__img hide-visually">
-            <label for="show-products-deals-events">Show <%= params[:controller] %> at</label>
-          </div>
-          <div class="flag__body">
-            <select class="one-whole" ng-controller="CentreSelectorController" ng-model="selectedCentre" ng-change="selectCentre()" ng-init="selectedCentre='<%= @centre.code %>'" id="show-products-deals-events">
-              <option value="<%= @centre.code %>"><%= @centre.short_name %></option>
-              <option value="<%= ([@centre] + @nearby_centres).map{|c| c.code}.join(',') %>"><%= @centre.short_name %> &amp; nearby centres</option>
-              <option value="all">All Centres</option>
-            </select>
-          </div>
+  <div class="section-nav__centre-selector container--wide toggle-visibility js-disabled-hide" id="show-products-deals-events-toggle">
+    <div class="container container--position">
+      <div class="flag flag--shrink-wrap">
+        <div class="flag__img hide-visually">
+          <label for="show-products-deals-events">Show <%= params[:controller] %> at</label>
+        </div>
+        <div class="flag__body">
+          <select class="one-whole" ng-controller="CentreSelectorController" ng-model="selectedCentre" ng-change="selectCentre()" ng-init="selectedCentre='<%= @centre.code %>'" id="show-products-deals-events">
+            <option value="<%= @centre.code %>"><%= @centre.short_name %></option>
+            <option value="<%= ([@centre] + @nearby_centres).map{|c| c.code}.join(',') %>"><%= @centre.short_name %> &amp; nearby centres</option>
+            <option value="all">All Centres</option>
+          </select>
         </div>
       </div>
     </div>
-  <%- end -%>
+  </div>
   <%# //Show products/deals/events centre selector %>
 
 </div>
+<%- end -%>
