--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -43,7 +43,7 @@
                   <% if movie.cloudinary_public_id %>
                     <%= cl_image_tag(movie.cloudinary_public_id, alt:"#{movie.title} movie picture", width: 578, crop: 'limit', quality: 25, format: 'jpg', fetch_format: 'auto') %>
                   <% else %>
-                    <%= image_tag 'placeholder-movie.jpg', alt: '', quality: 70, fetch_format: 'auto' %>
+                    <%= image_tag 'placeholder-movie.png', alt: '', fetch_format: 'auto' %>
                   <% end %>
                 </div>
                 <div class="tile__meta">
