WSF-5963 added classes to the canned search tag line

--- a/app/views/shared/tiles/_canned_search.html.erb
+++ b/app/views/shared/tiles/_canned_search.html.erb
@@ -12,6 +12,6 @@
   </span>
   <div class="tile__meta__inner">
     <h3 class="tile__meta__hdr txt-truncate"><%= result.name %></h3>
-    <p><%= result.tag_line %></p>
+    <p class="tile__meta__desc txt-truncate"><%= result.tag_line %></p>
   </div>
 </div>
