--- a/app/views/shared/tiles/_canned_search.html.erb
+++ b/app/views/shared/tiles/_canned_search.html.erb
@@ -4,7 +4,7 @@
     width: 288,
     crop: 'limit',
     format: 'jpg',
-    fetch_format: 'auto')
+    fetch_format: 'auto') %>
 </div>
 <div class="tile__meta">
   <span class="tile__meta__icon">
