--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -38,7 +38,7 @@
 
             <%# Movie tile %>
             <article class="tile box" role="article">
-              <a href="<%= centre_movie_path(centre_id: @centre.code, id: movie.id, movie_name: movie.url_safe_title) %>">
+              <a href="<%= centre_movie_path(centre_id: @centre.code, id: movie.id, movie_name: movie.title.to_slug) %>">
                 <div class="tile__image">
                   <% if movie.cloudinary_public_id %>
                     <%= cl_image_tag(movie.cloudinary_public_id, alt:"#{movie.title} movie picture", width: 578, crop: 'limit', quality: 25, format: 'jpg', fetch_format: 'auto') %>
