--- a/app/views/products/redirection.html.erb
+++ b/app/views/products/redirection.html.erb
@@ -2,7 +2,8 @@
   <%= site_logo %>
 
   <p>Forwarding to <%= meta.retail_chain_name %> website<br> or go to the
-    <a href="<%= meta.product_tracking_url %>" rel="external">retailer's site</a>
+  <%= link_to "retailer's site", meta.product_tracking_url, target: "_blank",
+    class: "js-redirect", rel: "external" %>
   directly.</p>
 
   <span class="preloader preloader--light">
@@ -10,3 +11,45 @@
     <em class="hide-visually">Loading, please wait&#8230;</em>
   </span>
 </div>
+
+<%- content_for :javascript do -%>
+  <script>
+    $(document).ready(function() {
+      $('.js-redirect').on("click", function(e){
+        e.preventDefault();
+        window.location.replace(collectUtmData());
+      });
+
+      setTimeout(function(){
+        window.location.replace(collectUtmData());
+      },3000)
+    });
+
+
+    function collectUtmData() {
+      var utmSource, utmKeyword, utmMedium, queryString;
+      var utmData = "";
+      var s = "%7C";
+      var ptu = "<%= meta.product_tracking_url %>";
+
+      <%# Only need to get pubref data if there is camref %>
+      <%- if @cam_ref %>
+        queryString = window.location.search;
+
+        utmSource = queryString.match(/(utm_source=[^&]*)/)
+        utmMedium = queryString.match(/(utm_medium=[^&]*)/)
+        utmKeyword = queryString.match(/(utm_keyword=[^&]*)/)
+
+        utmData += utmSource ? s + utmSource[1] : "";
+        utmData += utmMedium ? s + utmMedium[1] : "";
+        utmData += utmKeyword ? s + utmKeyword[1] : "";
+
+        n = ptu.indexOf('/adref:');
+        ptu = ptu.substr(0,n) + utmData + ptu.substr(n);
+      <%- end %>
+
+      return ptu;
+    }
+
+  </script>
+<%- end %>
