Use JS hook for fastclick

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -97,7 +97,7 @@
 
       <%# Stores list %>
       <div class="stores-maps__list-detail js-defer-image-load-container" id="stores-maps-toggle-listing-detail">
-        <dl class="stores-list">
+        <dl class="stores-list js-fastclick">
           <% @grouped_stores.each do |letter, stores| %>
 
             <dt>
