--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -8,6 +8,7 @@
   <div class="tile__controls">
     <%= render "/shared/social_share",
       url: tile_url(@centre, result),
+      twitter_title: result.meta.twitter_title,
       title: result.meta.title,
       image: result.meta.image
     %>
