--- a/app/views/layouts/detail_view.html.erb
+++ b/app/views/layouts/detail_view.html.erb
@@ -10,7 +10,7 @@
 
   <% unless meta.hide_social_share %>
     <div class="detail-view__controls detail-view__divider">
-      <%= render "/shared/social_share", url: current_url, title: meta.title.to_s, image: meta.image %>
+      <%= render "/shared/social_share", url: current_url, title: meta.title.to_s, twitter_title: meta.twitter_title.to_s, image: meta.image %>
 
       <% if in_lightbox? %>
         <button type="button" class="btn"><span class="icon icon--close-sml icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Close</span></button>
