Add 'Media' link - WSF-5982

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -145,9 +145,9 @@
         <li>
           <%= link_to 'Our Community', 'http://corporate.westfield.com/about/sustainability/', rel: 'external', target: '_blank' %>
         </li>
-        <%#<li>%>
-          <%#= link_to 'Media', 'http://media.westfield.com.au', rel: 'external', target: '_blank' %>
-        <%#</li>%>
+        <li>
+          <%= link_to 'Media', 'http://media.westfield.com.au', rel: 'external', target: '_blank' %>
+        </li>
       </ul>
 
       <nav role="navigation" class="national__footer__nav">
