--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -110,7 +110,7 @@
 						<ul>
 							<li class="nav-buy-gift-cards"><%= link_to 'Buy Gift Cards', 'http://www.westfieldgiftcards.com.au', rel: 'external', target: '_blank' %></li>
 							<li><%= link_to 'Westfield Group', 'http://corporate.westfield.com/', rel: 'external', target: '_blank' %></li>
-							<%#<li>%><%#= link_to 'Media', 'http://media.westfield.com.au', rel: 'external', target: '_blank' %><%#</li>%>
+							<li><%= link_to 'Media', 'http://media.westfield.com.au', rel: 'external', target: '_blank' %></li>
 							<li><%= link_to 'Terms &amp; Conditions'.html_safe, '/terms-conditions' %></li>
 							<li><%= link_to 'Privacy Policy', '/privacy-policy' %></li>
 							<li class="nav-site-feedback"><button type="button" class="btn js-btn-site-feedback">Give feedback</button></li>
