Revert "Merge pull request #609 from ewee/master"
This reverts commit c474832fe838d8e151bafd051b4b5d15d4653275, reversing
changes made to 352ff56e96d630dfae243d37a03bb822d0615d9b.

--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -66,7 +66,7 @@
                         <% if today?(day.date) %><em class="txt-bold"><% end %><%= format_day(day.date,0,3) %><span class="hide-fully--palm"><%= format_day(day.date,3,6) %></span><% if today?(day.date) %></em><% end %>
                       </td>
                       <td>
-                        <% if day.description.present? %>
+                        <% if day.description %>
                           <em class="pill <%= "txt-truncate" if day.description.length > 18 %> hide-fully--palm" <%= "title=\"#{day.description}\"".html_safe if day.description.length > 18 %>><%= day.description %></em>
                           <em class="pill hide-fully--non-palm">Holiday</em>
                         <% else %>
@@ -129,7 +129,7 @@
                   </thead>
 
                   <tbody>
-                    <% @store_trading_hours[week_number].each do |day| %>
+                    <% @store_trading_hours[week_number].try(:each) do |day| %>
                       <tr>
                         <td>
                           <% if today?(day.date) %><em class="txt-bold"><% end %><%= format_day(day.date,0,3) %><span class="hide-fully--palm"><%= format_day(day.date,3,6) %></span><% if today?(day.date) %></em><% end %>
