Enable notices link in centre info nav

--- a/app/views/centre_info/_notices.html.erb
+++ b/app/views/centre_info/_notices.html.erb
@@ -1,5 +1,5 @@
 <%# Notices %>
-<h2 id="notice">Notices</h2>
+<h2 id="notices">Notices</h2>
 
 <div class="mrg-dbl-alt">
   <div class="grid grid--gutter-dbl">
