fixes giftcards and stores with unmatch geom id

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -71,7 +71,7 @@
                   </dd>
                 <%- end %>
 
-                <%- if @store.accepts_giftcard.present? %>
+                <%- if @store.accepts_giftcards.present? %>
                   <dt class="hide-visually">Westfield gift card</dt>
                   <dd>
                     Gift card accepted
