--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,7 +13,7 @@
 
     <div class="detail-view__media detail-view__mrg-base" itemprop="photo">
       <%= fetch_image_tag @event.image,
-        alt: "Photo of event: #{@event.name}",
+        alt: "",
         width: 638,
         crop: :limit,
         format: :auto
