--- a/app/views/shared/tiles/_canned_search.html.erb
+++ b/app/views/shared/tiles/_canned_search.html.erb
@@ -1,7 +1,7 @@
 <div class="tile__image">
   <%= cl_image_tag(result.image_ref,
-    alt: result.image_alt,
     width: 289,
+    alt: "",
     crop: 'limit',
     format: 'jpg',
     fetch_format: 'auto') %>
