--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -1,7 +1,7 @@
 <div class="tile__image">
   <%= fetch_image_tag result.image,
-    alt: "Photo of event: #{result.name}",
     width: 289,
+    alt: "",
     crop: :limit,
     format: :auto
   %>
